@@ -9,5 +9,6 @@
 		<flag name="auto-arrange">Atto arrange support viy graphviz (2.34 not supported at that time)</flag>
 		<flag name="gir">Use gir</flag>
 		<flag name="session">Build Jack session support</flag>
+		<flag name="webkit">Use webkit-gtk to display plugin documentation</flag>
 	</use>
 </pkgmetadata>
