@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Apr 2014; Dominique Michel <dominique_libre@users.sourceforge.net>
+  drobilla-9999.ebuild:
+  added webkit USE flag for plugin documentation
+
   19 Dec 2013; Dominique Michel <dominique_libre@users.sourceforge.net>
   drobilla-9999.ebuild: added auto-arrange USE flag for graphviz support
   Note that graphviz broke the API between 2.28 and 2.34, so 2.34 is not supported
